--- a/src/main/resources/static/petlisting.html
+++ b/src/main/resources/static/petlisting.html
@@ -36,7 +36,7 @@
 
     <main class="pet-listing">
         <h1>Pet Listing</h1>
-        <p class="description">Short Description</p>
+        <p class="description">Find your new best friend from our lovely pets available for adoption.</p>
             <section class="filter">
                 <div class="filter-grid">
                     <fieldset class="filter-group">
@@ -98,35 +98,7 @@
             </section>
 
 
-            <section class="pet-list">
-                <div class="pet-card">
-                    <a href="petdetail.html" style="text-decoration: none; color: inherit;">
-                    <img src="homepageResources/hq720.jpg" alt="image" width="100">
-                    <p class="name">เมกาทรอน</p>
-                </a>
-                </div>
-
-            <div class="pet-card">
-                    <img src="https://i.pinimg.com/736x/0e/a3/6e/0ea36ee7bc893407525f1d30b72702cb.jpg" alt="image" width="100">
-                    <p class="name">น้องส้ม</p>
-            </div>
-
-            <div class="pet-card">
-                    <img src="https://i.pinimg.com/736x/0e/a3/6e/0ea36ee7bc893407525f1d30b72702cb.jpg" alt="image" width="100">
-                    <p class="name">น้องส้ม</p>
-            </div>
-
-            <div class="pet-card">
-                    <img src="https://i.pinimg.com/736x/0e/a3/6e/0ea36ee7bc893407525f1d30b72702cb.jpg" alt="image" width="100">
-                    <p class="name">น้องส้ม</p>
-            </div>
-
-            <div class="pet-card">
-                    <img src="https://i.pinimg.com/736x/0e/a3/6e/0ea36ee7bc893407525f1d30b72702cb.jpg" alt="image" width="100">
-                    <p class="name">น้องส้ม</p>
-            </div>
-        </div>
-</section>
+            <section class="pet-list" id="pet-list"></section>
     </main>
 
     
