--- a/src/main/resources/static/petdetail.html
+++ b/src/main/resources/static/petdetail.html
@@ -84,7 +84,8 @@
         <div class="buttons">
             <a href="petlisting.html" style="text-decoration: none; color: inherit;">
             <button class="btn btn-secondary" id="backBtn">ย้อนกลับ</button></a>
-            <button class="btn btn-primary" id="adoptBtn">ขอรับเลี่้ยง</button>
+            <a href="userform.html" style="text-decoration: none; color: inherit;">
+            <button class="btn btn-primary" id="adoptBtn">ขอรับเลี่้ยง</button></a>
         </div>
     </div>
 
