fix border problem

--- a/src/main/resources/static/petdetail.html
+++ b/src/main/resources/static/petdetail.html
@@ -33,7 +33,7 @@
     </header>
 
 
-
+    <div class="fullwidth-section">
     <div class="container">
         <h1>ทำความรู้จักน้อง</h1>
         
@@ -88,7 +88,7 @@
             <button class="btn btn-primary" id="adoptBtn">ขอรับเลี่้ยง</button></a>
         </div>
     </div>
-
+    </div>
     
     <footer>
         <div class="footer">
