--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -45,7 +45,7 @@
             </div>
             <div class="change-container">
                 <p>Don’t have an account?</p>
-                <a href="register.html" class="change">Sign Up</a>
+                <a href="register.html" class="change">Create account</a>
             </div>
         </div>
     </section>
