--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -15,7 +15,7 @@
                 <img src="homepageResources/pet-house.png" alt="Logo">
                 <p>Pet Adoption</p>
             </div>
-            <h1>Sign up</h1>
+            <h1>Create account</h1>
             <div class="input-container">
                 <div class="input-group">
                     <div class="input-wrapper">
@@ -46,7 +46,7 @@
                 </div>
             </div>
 
-            <button type="submit" class="confirm-btn">Sign up</button>
+            <button type="submit" class="confirm-btn">Create account</button>
 
             <div class="divider-container">
                 <div class="line"></div>
