--- a/src/main/resources/static/contact.html
+++ b/src/main/resources/static/contact.html
@@ -23,7 +23,7 @@
                 </ul> 
 
                 <a href="login.html">
-                    <button class="login-btn">Log in</button> 
+                    <button class="logout-btn">Log out</button> 
                 </a>
             </nav>
 
