--- a/src/main/resources/static/homepage.html
+++ b/src/main/resources/static/homepage.html
@@ -36,10 +36,17 @@
 
     <main>
         <!-- introduction-->
-        <div class="introduction">
-            <h1>เว็บไซต์ของมูลนิธิบ้านสัตว์เลี้ยง<br>ช่วยเหลือสัตว์ให้ได้มีบ้านแสนอบอุ่น</h1>
-            <p>ร่วมเป็นส่วนหนึ่งในการต่อชีวิตเพื่อนตัวน้อย</p>
-        </div>
+        <section class="introduction">
+            <img src="homepageResources/Introduction.png" alt="A welcoming scene with pets" class="intro-background-image">
+    
+            <div class="intro-content">
+                <h1 class="topic">Pet Adoption</h1>
+                <p>เว็บไซต์ของมูลนิธิบ้านสัตว์เลี้ยงช่วยเหลือสัตว์ให้ได้มีบ้านแสนอบอุ่น</p>
+                <div class="more-intro-container">
+                    <a href="petlisting.html" class="more-intro-btn">ร่วมเป็นส่วนหนึ่งในการต่อชีวิตเพื่อนตัวน้อย</a>
+                </div>
+            </div>
+        </section>
         <!--animal cards-->
         <section class="pet-preview-section">
             <div class="divider-container">
