--- a/bin/src/main/resources/static/userform.html
+++ b/bin/src/main/resources/static/userform.html
@@ -13,7 +13,7 @@
 
     <div id="successMsg" class="success-msg">ส่งข้อมูลเรียบร้อย ขอบคุณที่สนใจรับเลี้ยงสัตว์!</div>
 
-    <form id="adoptionForm" method="post" action="/api/users" enctype="multipart/form-data">
+    <form id="adoptionForm" method="post" action="/submitAdoption" enctype="multipart/form-data">
         <label for="firstName">ชื่อ <span class="required">*</span></label>
         <input type="text" id="firstName" name="firstName" required />
         <div id="firstNameError" class="error"></div>
@@ -21,7 +21,6 @@
         <label for="lastName">นามสกุล <span class="required">*</span></label>
         <input type="text" id="lastName" name="lastName" required />
         <div id="lastNameError" class="error"></div>
-        
 
         <label for="age">อายุ <span class="required">*</span></label>
         <input type="number" id="age" name="age" min="1" max="120" required />
@@ -32,9 +31,16 @@
         <div id="phoneError" class="error"></div>
 
         
-        <label for="profileImageUrl">ไฟล์แนบ (เอกสาร เช่น สำเนาบัตรประชาชน) <span class="required">*</span></label>
-        <input type="file" id="profileImageUrl" name="profileImageUrl" accept=".pdf,.jpg,.jpeg,.png" required />
-        <div id="profileImageUrlError" class="error"></div>
+        <label for="identityDoc">ไฟล์แนบ (เอกสาร เช่น สำเนาบัตรประชาชน) <span class="required">*</span></label>
+        <input type="file" id="identityDoc" name="identityDoc" accept=".pdf,.jpg,.jpeg,.png" required />
+        <div id="identityDocError" class="error"></div>
+
+
+        <label for="addressDoc">ไฟล์แนบรูปหลักฐานที่อยู่ <span class="required">*</span></label>
+        <input type="file" id="addressDoc" name="addressDoc" accept=".pdf,.jpg,.jpeg,.png" required />
+        <div id="addressDocError" class="error"></div>
+
+
 
         <label for="reason">เหตุผลที่อยากรับเลี้ยงสัตว์ <span class="required">*</span></label>
         <textarea id="reason" name="reason" required placeholder="กรุณาเขียนเหตุผลของคุณ"></textarea>
@@ -44,9 +50,9 @@
         <textarea id="address" name="address" required placeholder="ที่อยู่ตามทะเบียนบ้าน"></textarea>
         <div id="addressError" class="error"></div>
 
-        <label for="career">อาชีพ <span class="required">*</span></label>
-        <input type="text" id="career" name="career" required />
-        <div id="careerError" class="error"></div>
+        <label for="occupation">อาชีพ <span class="required">*</span></label>
+        <input type="text" id="occupation" name="occupation" required />
+        <div id="occupationError" class="error"></div>
 
         <button type="submit">ส่งแบบฟอร์ม</button>
     </form>
