--- a/src/main/resources/static/userform.html
+++ b/src/main/resources/static/userform.html
@@ -3,11 +3,35 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>แบบฟอร์มขอรับเลี้ยงสัตว์ | Pet Adoption System</title>
+    <title>Pet Adoption Form | Pet Adoption System</title>
     <link rel="stylesheet" href="userform.css"> 
+    <link rel="stylesheet" href="all.css">
 </head>
 <body>
+    <!-- navigation bar-->
+<header>
+    <nav class="navbar">
+        <div class="logo">
+            <img src="homepageResources/icon.png" alt="Logo">
+        </div>
 
+        <ul class="nav-links">
+            <li class="active"><a href="homepage.html" class="active">Homepage</a></li>
+            <li><a href="petlisting.html">Pet Listing</a></li>
+            <li><a href="contact.html">About/Contact Us</a></li>
+        </ul> 
+
+        <a href="login.html">
+            <button class="logout-btn">Log out</button> 
+        </a>
+    </nav>
+
+    <div class="hamburger">
+        ☰
+    </div>
+</header>
+
+<main>
 <div class="container">
     <h2>แบบฟอร์มขอรับเลี้ยงสัตว์</h2>
 
@@ -54,10 +78,40 @@
         <input type="text" id="occupation" name="occupation" required />
         <div id="occupationError" class="error"></div>
 
-        <button type="submit">ส่งแบบฟอร์ม</button>
+        <div class="form-but">
+           <button class="cancel">ยกเลิก</button>
+            <button class="submit" type="submit">ส่งแบบฟอร์ม</button> 
+        </div>
+        
     </form>
 </div>
+</main>
+    <!-- footer -->
+<footer>
+    <div class="footer">
+        <div class="about">
+            <div class="logo">
+                <img src="homepageResources/icon.png" alt="Logo">
+            </div>
+            <p>Pet Adoption System</p>
+            <p class="location">เลขที่ 11/1 ชั้น 1 ห้อง 111 อาคารสาทรธานี 1 ถนนสาทรเหนือ<br>แขวงสีลม เขตบางรัก กรุงเทพมหานคร 10100<br>Tel : 011-111-1111</p>
+        </div>
 
+        <div class="social-container">
+            <a href="#" class="social-btn">
+                <img src="homepageResources/FacebookLogo.png" alt="Facebook icon">
+                <span>Pet Adoption</span>
+            </a>
+
+            <a href="#" class="social-btn">
+                <img src="homepageResources/InstagramLogo.png" alt="Instagram icon">
+                <span>pet_adoption</span>
+            </a>
+        </div>                
+    </div>
+</footer>
+
+<script src="all.js"></script>
 <script src="userform.js"></script>
 
 </body>
