adjust name of table in database

--- a/src/main/resources/static/userform.html
+++ b/src/main/resources/static/userform.html
@@ -13,7 +13,7 @@
 
     <div id="successMsg" class="success-msg">ส่งข้อมูลเรียบร้อย ขอบคุณที่สนใจรับเลี้ยงสัตว์!</div>
 
-    <form id="adoptionForm" method="post" action="/api/users" enctype="multipart/form-data">
+    <form id="adoptionForm" method="post" action="/api/form" enctype="multipart/form-data">
         <label for="firstName">ชื่อ <span class="required">*</span></label>
         <input type="text" id="firstName" name="firstName" required />
         <div id="firstNameError" class="error"></div>
