--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -20,9 +20,17 @@
                 <div class="input-group">
                     <div class="input-wrapper"> 
                         <i class="fa-solid fa-user icon"></i>
-                        <input type="text" id="username" class="username-input" placeholder="Username or Email Address">
+                        <input type="text" id="username" class="username-input" placeholder="Username">
                     </div>
                     <small class="error-message" id="username-error"></small>
+                </div>
+
+                <div class="input-group">
+                    <div class="input-wrapper"> 
+                        <i class="fa-solid fa-envelope icon"></i>
+                        <input type="text" id="email" class="email-input" placeholder="Email Address">
+                    </div>
+                    <small class="error-message" id="email-error"></small>
                 </div>
 
                 <div class="input-group">
