--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -20,11 +20,19 @@
                 <div class="input-group">
                     <div class="input-wrapper">
                         <i class="fa-solid fa-user icon"></i>
-                        <input type="text" id="username" class="username-input" placeholder="Username or Email Address">
+                        <input type="text" id="username" class="username-input" placeholder="Username">
         
                         <i class="fa-solid fa-circle-check status-icon" id="username-status-icon"></i>
                     </div>
                     <small class="message" id="username-message"></small>
+                </div>
+
+                <div class="input-group">
+                    <div class="input-wrapper"> 
+                        <i class="fa-solid fa-envelope icon"></i>
+                        <input type="text" id="email" class="email-input" placeholder="Email Address">
+                    </div>
+                    <small class="error-message" id="email-error"></small>
                 </div>
 
                 <div class="input-group">
