--- a/src/main/resources/static/petdetail.html
+++ b/src/main/resources/static/petdetail.html
@@ -23,9 +23,8 @@
                 <li><a href="contact.html">About/Contact Us</a></li>
             </ul> 
 
-            <a href="login.html">
-                <button class="logout-btn">Log out</button> 
-            </a>
+            <!-- Log out Button -->
+            <button class="logout-btn" id="logout-button">Log out</button>
         </nav>
       <div class="hamburger">
         ☰
