change link file

--- a/src/main/resources/static/userform.html
+++ b/src/main/resources/static/userform.html
@@ -170,7 +170,7 @@
 </footer>
 
 <script src="all.js"></script>
-<script src="testUserform.js"></script>
+<script src="userform.js"></script>
 
 </body>
 </html>
