--- a/src/main/resources/static/userform.html
+++ b/src/main/resources/static/userform.html
@@ -35,7 +35,7 @@
 <main>
 <div class="title">
     <hr>
-    <h1>Pet Adoption Online Form</h1>
+    <h1>แบบฟอร์มส่งคำขอรับเลี้ยงสัตว์</h1>
     <hr>
 </div>
     
@@ -46,72 +46,72 @@
 
         <!--- part 1 --->
         <div class="part">
-            <p>Part 1: Applicant Information</p>
+            <p>Part 1: ข้อมูลของผู้รับเลี้ยง</p>
             <hr>
 
-            <label for="firstName">First Name <span class="required">*</span></label>
-            <input type="text" id="firstName" name="firstName" placeholder="Enter your first name without the title." required />
+            <label for="firstName">ชื่อจริง <span class="required">*</span></label>
+            <input type="text" id="firstName" name="firstName" placeholder="ไม่ต้องใส่คำนำหน้า" required />
             <div id="firstNameError" class="error"></div>
 
-            <label for="lastName">Last Name <span class="required">*</span></label>
-            <input type="text" id="lastName" name="lastName" placeholder="Enter your last name" required />
+            <label for="lastName">นามสกุล <span class="required">*</span></label>
+            <input type="text" id="lastName" name="lastName" placeholder="ใส่นามสกุล" required />
             <div id="lastNameError" class="error"></div>
 
-            <label for="dob">Date of Birth <span class="required">*</span></label>
+            <label for="dob">วัน/เดือน/ปีที่เกิด <span class="required">*</span></label>
             <input type="date" id="dob" name="dob" min="1900-01-01" max="2025-12-31" required>
             <div id="dobError" class="error"></div>
 
-            <label for="phone">Phone Number <span class="required">*</span></label>
-            <input type="tel" id="phone" name="phone" pattern="[0-9]{9,10}" placeholder="Enter your 10-digit phone number" required />
+            <label for="phone">เบอร์โทรศัพท์ <span class="required">*</span></label>
+            <input type="tel" id="phone" name="phone" pattern="[0-9]{9,10}" placeholder="ใส่หมายเลข 10 หลัก" required />
             <div id="phoneError" class="error"></div>
 
-            <label for="email">Email Address <span class="required">*</span></label>
-            <input type="email" id="email" name="email" placeholder="Enter your email address" required />
+            <label for="email">อีเมล <span class="required">*</span></label>
+            <input type="email" id="email" name="email" placeholder="เช่น pet_adoption@gmail.com" required />
             <div id="emailError" class="error"></div>
 
-            <label for="occupation">Occupation <span class="required">*</span></label>
-            <input type="text" id="occupation" name="occupation" placeholder="e.g., Student, Graphic Designer" required />
+            <label for="occupation">อาชีพ <span class="required">*</span></label>
+            <input type="text" id="occupation" name="occupation" placeholder="เช่น นักเรียน, กราฟิกดีไซเนอร์" required />
             <div id="occupationError" class="error"></div>
 
-            <label for="identityDoc">Copy of National ID Card / Passport <span class="required">*</span></label>
+            <label for="identityDoc">สำเนาบัตรประชาชนหรือพาสสปอร์ต <span class="required">*</span></label>
             <input type="file" id="identityDoc" name="identityDoc" accept=".pdf,.jpg,.jpeg,.png" required />
             <div id="identityDocError" class="error"></div>
         </div>
 
         <!--- part 2 --->
         <div class="part">
-            <p>Part 2: Housing & Environment</p>
+            <p>Part 2: ข้อมูลที่อยู่อาศัยและสภาพแวดล้อม</p>
             <hr>
 
-            <label for="address">Current Address <span class="required">*</span></label>
-            <textarea id="address" name="address" placeholder="Please provide your full current address, including house number, street, and postal code." required></textarea>
+            <label for="address">ที่อยู่ปัจจุบัน <span class="required">*</span></label>
+            <textarea id="address" name="address" placeholder="กรุณาระบุที่อยู่ปัจจุบันของคุณให้ครบถ้วน" required></textarea>
             <div id="addressError" class="error"></div>
 
-            <label>Type of Residence <span class="required">*</span></label>
+            <label>ประเภทของที่อยู่อาศัย <span class="required">*</span></label>
             <div class="select">
-                <label><input type="radio" name="residenceType" value="house" required>House</label>
-                <label><input type="radio" name="residenceType" value="townhouse">Townhouse</label>
-                <label><input type="radio" name="residenceType" value="condo">Condominium</label>
-                <label><input type="radio" name="residenceType" value="apartment">Apartment</label>
+                <label><input type="radio" name="residenceType" value="house" required>บ้านเดี่ยว</label>
+                <label><input type="radio" name="residenceType" value="townhouse">ทาวน์เฮ้าส์</label>
+                <label><input type="radio" name="residenceType" value="condo">คอนโดมิเนียม</label>
+                <label><input type="radio" name="residenceType" value="apartment">อพาร์ตเมนต์</label>
             </div>
             <div id="residenceTypeError" class="error"></div>
 
-            <label for="residenceDoc">Copy of House Registration <span class="required">*</span></label>
+            <label for="residenceDoc">สำเนาทะเบียนบ้าน <span class="required">*</span></label>
             <input type="file" id="residenceDoc" name="residenceDoc" accept=".pdf,.jpg,.jpeg,.png" required />
             <div id="residenceDocError" class="error"></div>
         </div>
 
         <!--- part 3 --->
         <div class="part">
-            <p>Part 3: Lifestyle & Pet Experience</p>
+            <p>Part 3: ประสบการณ์การเลี้ยงสัตว์</p>
             <hr>
 
-            <label for="experience">Have you owned pets before? If yes, please describe. <span class="required">*</span></label>
-            <textarea id="experience" name="experience" required placeholder="Describe the type of pets, how long you had them, and what happended to them."></textarea>
+            <label for="experience">คุณเคยเลี้ยงสัตว์เลี้ยงมาก่อนหรือไม่? ถ้าเคย โปรดเล่าประสบการณ์ของคุณ <span class="required">*</span></label>
+            <textarea id="experience" name="experience" required placeholder="เล่าเกี่ยวกับสัตว์เลี้ยงของคุณหน่อย — คุณเคยเลี้ยงสัตว์ชนิดใด เลี้ยงมานานแค่ไหน แล้วตอนนี้พวกมันเป็นอย่างไรบ้าง"></textarea>
             <div id="experienceError" class="error"></div>
 
-            <label for="reason">Why do you want to adopt a pet?<span class="required">*</span></label>
-            <textarea id="reason" name="reason" required placeholder="Tell us about your readiness and what you can offer to pet."></textarea>
+            <label for="reason">ทำไมคุณถึงอยากรับเลี้ยงสัตว์เลี้ยง? <span class="required">*</span></label>
+            <textarea id="reason" name="reason" required placeholder="บอกเราเกี่ยวกับความพร้อมของคุณและสิ่งที่คุณสามารถมอบให้สัตว์เลี้ยงได้"></textarea>
             <div id="reasonError" class="error"></div>
         </div>
 
@@ -121,25 +121,25 @@
             <hr>
 
             <label class="agreement"><input type="checkbox" id="trueInfor" required>
-                I certify that the information provided in this application is true and correct.
+                ฉันขอรับรองว่าข้อมูลที่ให้ไว้ในใบสมัครนี้เป็นความจริงและถูกต้องทุกประการ
             </label>
             <div id="trueInforError" class="error"></div>
 
             <label class="agreement"><input type="checkbox" id="acceptRight" required>
-                I understand that the adoption organization has the right to refuse any application.
+                ฉันเข้าใจว่ามูลนิธิมีสิทธิ์ที่จะปฏิเสธการส่งคำขอรับเลี้ยงสัตว์ใดๆ โดยไม่ต้องแจ้งให้ทราบล่วงหน้า
             </label>
             <div id="acceptRightError" class="error"></div>
 
             <label class="agreement"><input type="checkbox" id="homeVisits" required>
-                I agree to a potential home visit from an organization representative.
+                ฉันยินยอมให้ตัวแทนขององค์กรไปเยี่ยมบ้านเพื่อประเมินสภาพแวดล้อมก่อนการรับเลี้ยงสัตว์
             </label>
             <div id="homeVisitsError" class="error"></div>
         </div>  
 
         <!-- button part -->
         <div class="form-btn">
-            <button type="submit" id="submit" disabled>Apply to Adopt</button> 
-            <button type="button" id="cancel" onclick="history.back()">Cancel</button>
+            <button type="submit" id="submit" disabled>ส่งฟอร์มคำขอรับเลี้ยงสัตว์</button> 
+            <button type="button" id="cancel" onclick="history.back()">ยกเลิก</button>
         </div>
     </form>
 </div>
