update style for consistency

--- a/src/main/resources/static/homepage.html
+++ b/src/main/resources/static/homepage.html
@@ -53,7 +53,7 @@
                 <h2 class="divider-text">Meet Our Lovely Pets</h2>
                 <div class="line"></div>
             </div>
-            <p class="description">Here are some of our friends waiting for a new home.</p>
+            <p class="description">นี่คือเพื่อนตัวน้อยของเราบางส่วนที่กำลังรอบ้านใหม่</p>
 
             <div class="pet-list" id="homepage-pet-list"></div>
 
