--- a/src/main/resources/static/petdetail.html
+++ b/src/main/resources/static/petdetail.html
@@ -34,7 +34,11 @@
 
     <div class="fullwidth-section">
     <div class="container">
-        <h1>ทำความรู้จักน้อง</h1>
+        <div class="title">
+            <hr>
+            <h1>Meet your little friend</h1>
+            <hr>
+        </div>
         
         <div class="pet-profile">
           
@@ -68,13 +72,6 @@
                         <li>โรคประจำตัว : ไม่มี</li>
                         <li>แพ้อาหาร : ปืนใหญ่ของ ออพติมัสไพร์ม</li>
                     </ul>
-
-                    <h3 style="margin-top: 20px;">ช่องทางการติดต่อ</h3>
-                    <ul id="contactInfo">
-                        <li>เบอร์โทร : 0821569909</li>
-                        <li>Facebook : เจ้าของสุขภาษา</li>
-                        <li>Line : 0821569909</li>
-                    </ul>
                 </div>
             </div>
         </div>
@@ -84,7 +81,7 @@
             <a href="petlisting.html" style="text-decoration: none; color: inherit;">
             <button class="btn btn-secondary" id="backBtn">ย้อนกลับ</button></a>
             <a href="userform.html" style="text-decoration: none; color: inherit;">
-            <button class="btn btn-primary" id="adoptBtn">ขอรับเลี่้ยง</button></a>
+            <button class="btn btn-primary" id="adoptBtn">ขอรับเลี้ยง</button></a>
         </div>
     </div>
     </div>
