--- a/src/main/resources/static/petlisting.html
+++ b/src/main/resources/static/petlisting.html
@@ -34,8 +34,12 @@
       </header>
 
     <main class="pet-listing">
-        <h1>Pet Listing</h1>
-        <p class="description">Find your new best friend from our lovely pets available for adoption.</p>
+        <div class="title">
+            <hr>
+            <h1>Pet Listing</h1>
+            <hr>
+        </div>
+        <p class="description">ค้นหาเพื่อนใหม่ที่ดีที่สุดของคุณจากสัตว์เลี้ยงแสนน่ารักของเราที่พร้อมรับเลี้ยง</p>
             <section class="filter">
                 <div class="filter-grid">
                     <fieldset class="filter-group">
