organize source code folder

--- a/src/main/resources/static/User/contact.html
+++ b/src/main/resources/static/User/contact.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="veiwport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="contact.css">
-    <link rel="stylesheet" href="all.css">    
-    <link rel="icon" href="homepageResources/icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="../all.css">    
+    <link rel="icon" href="../homepageResources/icon.png" type="image/x-icon">
     <title>About/Contact Us | Pet Adoption System</title>    
 </head>
 <body>
@@ -13,11 +13,11 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="homepageResources/icon.png" alt="Logo">
+                <img src="../homepageResources/icon.png" alt="Logo">
             </div>
 
             <ul class="nav-links">
-                    <li><a href="homepage.html">Homepage</a></li>
+                    <li><a href="../index.html">Homepage</a></li>
                     <li><a href="petlisting.html">Pet Listing</a></li>
                     <li class="active"><a href="contact.html" class="active">About/Contact Us</a></li>
                 </ul> 
@@ -59,7 +59,7 @@
                     <div class="footer">
                         <div class="about">
                             <div class="logo">
-                                <img src="homepageResources/icon.png" alt="Logo">
+                                <img src="../homepageResources/icon.png" alt="Logo">
                             </div>
                             <p>Pet Adoption System</p>
                             <p class="location">เลขที่ 11/1 ชั้น 1 ห้อง 111 อาคารสาทรธานี 1 ถนนสาทรเหนือ<br>แขวงสีลม เขตบางรัก กรุงเทพมหานคร 10100<br>Tel : 011-111-1111</p>
@@ -67,12 +67,12 @@
 
                         <div class="social-container">
                             <a href="#" class="social-btn">
-                                <img src="homepageResources/FacebookLogo.png" alt="Facebook icon">
+                                <img src="../homepageResources/FacebookLogo.png" alt="Facebook icon">
                                 <span>Pet Adoption</span>
                             </a>
 
                             <a href="#" class="social-btn">
-                                <img src="homepageResources/InstagramLogo.png" alt="Instagram icon">
+                                <img src="../homepageResources/InstagramLogo.png" alt="Instagram icon">
                                 <span>pet_adoption</span>
                             </a>
                         </div>                
@@ -88,26 +88,26 @@
         <div class="footer">
             <div class="about">
                 <div class="logo">
-                    <img src="homepageResources/icon.png" alt="Logo">
+                    <img src="../homepageResources/icon.png" alt="Logo">
                 </div>
                 <p>Pet Adoption System</p>
                 <p class="location">เลขที่ 11/1 ชั้น 1 ห้อง 111 อาคารสาทรธานี 1 ถนนสาทรเหนือ<br>แขวงสีลม เขตบางรัก กรุงเทพมหานคร 10100<br>Tel : 011-111-1111</p>
             </div>
             <div class="social-container">
                 <a href="#" class="social-btn">
-                    <img src="homepageResources/FacebookLogo.png" alt="Facebook icon">
+                    <img src="../homepageResources/FacebookLogo.png" alt="Facebook icon">
                     <span>Pet Adoption</span>
                 </a>
 
                 <a href="#" class="social-btn">
-                    <img src="homepageResources/InstagramLogo.png" alt="Instagram icon">
+                    <img src="../homepageResources/InstagramLogo.png" alt="Instagram icon">
                     <span>pet_adoption</span>
                 </a>
             </div>                
         </div>
     </footer>
 
-        <script src="all.js"></script>
+        <script src="../all.js"></script>
 
     </body>
 </html>
