--- a/src/main/resources/static/User/petlisting.html
+++ b/src/main/resources/static/User/petlisting.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />   
     <link rel="stylesheet" href="petlisting.css">
-    <link rel="stylesheet" href="all.css">
+    <link rel="stylesheet" href="../all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-    <link rel="icon" href="homepageResources/icon.png" type="image/x-icon">
+    <link rel="icon" href="../homepageResources/icon.png" type="image/x-icon">
     <title>Pet Listing | Pet Adoption System</title>
 </head>
 
@@ -14,11 +14,11 @@
         <header>
             <nav class="navbar">
                 <div class="logo">
-                    <img src="homepageResources/icon.png" alt="Logo">
+                    <img src="../homepageResources/icon.png" alt="Logo">
                 </div>
 
                 <ul class="nav-links">
-                    <li><a href="homepage.html">Homepage</a></li>
+                    <li><a href="../index.html">Homepage</a></li>
                     <li class="active"><a href="petlisting.html" class="active">Pet Listing</a></li>
                     <li><a href="contact.html">About/Contact Us</a></li>
                 </ul> 
@@ -109,7 +109,7 @@
         <div class="footer">
             <div class="about">
                 <div class="logo">
-                    <img src="homepageResources/icon.png" alt="Logo">
+                    <img src="../homepageResources/icon.png" alt="Logo">
                 </div>
             
                 <p>Pet Adoption System</p>
@@ -118,12 +118,12 @@
 
             <div class="social-container">
                 <a href="#" class="social-btn">
-                    <img src="homepageResources/FacebookLogo.png" alt="Facebook icon">
+                    <img src="../homepageResources/FacebookLogo.png" alt="Facebook icon">
                     <span>Pet Adoption</span>
                 </a>
 
                 <a href="#" class="social-btn">
-                    <img src="homepageResources/InstagramLogo.png" alt="Instagram icon">
+                    <img src="../homepageResources/InstagramLogo.png" alt="Instagram icon">
                     <span>pet_adoption</span>
                 </a>
             </div>                
@@ -131,7 +131,7 @@
     </footer>
 
         <script src="petlisting.js"></script>
-        <script src="all.js"></script>
+        <script src="../all.js"></script>
 
     </body>
 </html>
