--- a/src/main/resources/static/User/userform.html
+++ b/src/main/resources/static/User/userform.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="userform.css"> 
-    <link rel="stylesheet" href="all.css">
-    <link rel="icon" href="homepageResources/icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="../all.css">
+    <link rel="icon" href="../homepageResources/icon.png" type="image/x-icon">
     <title>Pet Adoption Form | Pet Adoption System</title>
 </head>
 <body>
@@ -13,16 +13,16 @@
 <header>
     <nav class="navbar">
         <div class="logo">
-            <img src="homepageResources/icon.png" alt="Logo">
+            <img src="../homepageResources/icon.png" alt="Logo">
         </div>
 
         <ul class="nav-links">
-            <li class="active"><a href="homepage.html">Homepage</a></li>
+            <li class="active"><a href="../index.html">Homepage</a></li>
             <li><a href="petlisting.html" class="active">Pet Listing</a></li>
             <li><a href="contact.html">About/Contact Us</a></li>
         </ul> 
 
-        <a href="login.html">
+        <a href="/login.html">
             <button class="logout-btn">Log out</button> 
         </a>
     </nav>
@@ -150,7 +150,7 @@
     <div class="footer">
         <div class="about">
             <div class="logo">
-                <img src="homepageResources/icon.png" alt="Logo">
+                <img src="../homepageResources/icon.png" alt="Logo">
             </div>
             <p>Pet Adoption System</p>
             <p class="location">เลขที่ 11/1 ชั้น 1 ห้อง 111 อาคารสาทรธานี 1 ถนนสาทรเหนือ<br>แขวงสีลม เขตบางรัก กรุงเทพมหานคร 10100<br>Tel : 011-111-1111</p>
@@ -158,19 +158,19 @@
 
         <div class="social-container">
             <a href="#" class="social-btn">
-                <img src="homepageResources/FacebookLogo.png" alt="Facebook icon">
+                <img src="../homepageResources/FacebookLogo.png" alt="Facebook icon">
                 <span>Pet Adoption</span>
             </a>
 
             <a href="#" class="social-btn">
-                <img src="homepageResources/InstagramLogo.png" alt="Instagram icon">
+                <img src="../homepageResources/InstagramLogo.png" alt="Instagram icon">
                 <span>pet_adoption</span>
             </a>
         </div>                
     </div>
 </footer>
 
-<script src="all.js"></script>
+<script src="../all.js"></script>
 <script src="userform.js"></script>
 
 </body>
