--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="homepage.css">    
     <link rel="stylesheet" href="all.css">
-    <link rel="stylesheet" href="petlisting.css">
+    <link rel="stylesheet" href="User/petlisting.css">
     <link rel="icon" href="homepageResources/icon.png" type="image/x-icon">
     <title>Homepage | Pet Adoption System</title>    
 </head>
@@ -18,9 +18,9 @@
             </div>
 
              <ul class="nav-links">
-                    <li class="active"><a href="homepage.html" class="active">Homepage</a></li>
-                    <li><a href="petlisting.html">Pet Listing</a></li>
-                    <li><a href="contact.html">About/Contact Us</a></li>
+                    <li class="active"><a href="index.html" class="active">Homepage</a></li>
+                    <li><a href="User/petlisting.html">Pet Listing</a></li>
+                    <li><a href="User/contact.html">About/Contact Us</a></li>
                 </ul> 
 
                 <!-- Log out Button -->
@@ -42,7 +42,7 @@
                 <h1 class="topic">Pet Adoption</h1>
                 <p>เว็บไซต์ของมูลนิธิบ้านสัตว์เลี้ยงช่วยเหลือสัตว์ให้ได้มีบ้านแสนอบอุ่น</p>
                 <div class="more-intro-container">
-                    <a href="petlisting.html" class="more-intro-btn">ร่วมเป็นส่วนหนึ่งในการต่อชีวิตเพื่อนตัวน้อย</a>
+                    <a href="User/petlisting.html" class="more-intro-btn">ร่วมเป็นส่วนหนึ่งในการต่อชีวิตเพื่อนตัวน้อย</a>
                 </div>
             </div>
         </section>
@@ -58,7 +58,7 @@
             <div class="pet-list" id="homepage-pet-list"></div>
 
             <div class="more-pets-container">
-                <a href="petlisting.html" class="more-pets-btn">View All Pets</a>
+                <a href="User/petlisting.html" class="more-pets-btn">View All Pets</a>
             </div>
         </section>
     </main>
