Fixed filters logic

--- a/src/main/resources/static/User/petlisting.html
+++ b/src/main/resources/static/User/petlisting.html
@@ -81,8 +81,20 @@
                             <input type="checkbox" id="breed-persian" name="breed" value="Persian" style="display: none;">
                             <label for="breed-persian" class="pick">Persian</label>
 
-                            <input type="checkbox" id="breed-labubu" name="breed" value="Labubu" style="display: none;">
-                            <label for="breed-labubu" class="pick">Labubu</label>
+                            <input type="checkbox" id="breed-siberian" name="breed" value="Siberian" style="display: none;">
+                            <label for="breed-siberian" class="pick">Siberian</label>
+                            
+                            <input type="checkbox" id="breed-sphynx" name="breed" value="Sphynx" style="display: none;">
+                            <label for="breed-sphynx" class="pick">Sphynx</label>
+
+                            <input type="checkbox" id="breed-shiba" name="breed" value="Shiba" style="display: none;">
+                            <label for="breed-shiba" class="pick">Shiba</label>
+
+                            <input type="checkbox" id="breed-golden" name="breed" value="Golden" style="display: none;">
+                            <label for="breed-golden" class="pick">Golden</label>
+
+                            <input type="checkbox" id="breed-poodle" name="breed" value="Poodle" style="display: none;">
+                            <label for="breed-poodle" class="pick">Poodle</label>
                         </div>
                     </fieldset>
 
